--- a/view/index.html.twig
+++ b/view/index.html.twig
@@ -14,9 +14,9 @@
             <h1 class="title" >Access | Movie </h1>
             <h2 class="text-center"> {{title}}</h2>
         </div>
-        <p style="margin-bottom: 10vh;">________________________________</p>
+        <hr>
       </header>
-        <section >
+        <section class="affichage" >
              {% block content %}
              {%  endblock %}
              
