--- a/view/index.html.twig
+++ b/view/index.html.twig
@@ -9,6 +9,30 @@
     <title>ACCESS-MOVIE</title>
 </head>
 <body  class="d-flex flex-column align-items-center justify-content-center">
+<div class="container-fluid manav">
+          <nav id="home" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+              <!--<a class="navbar-brand" href="index.html"><i class="far fa-smile-wink"></i></a>-->
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="ml-1 mr-1 nav-item d-flex justify-content-center align-items-center">
+                    <i class="fas fa-home"></i>
+                      <a class="m-1 nav-link" href="index.html">Accueil <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="ml-1 mr-1 nav-item  d-flex justify-content-center align-items-center">
+                    <i class="fas fa-file-invoice"></i>
+                      <a class="m-1 nav-link" href="candidat.html">A Propos</a>
+                    </li>
+                  <li class="ml-1 mr-1 nav-item  d-flex justify-content-center align-items-center">
+                      <i class="far fa-handshake"></i>
+                      <a class="m-1 nav-link" href="recruteur.html">Contact</a>
+                    </li>
+                </ul>
+              </div>
+            </nav>
+          </div> 
     <header class="d-flex flex-column justify-content-center align-items-center" id="home">
         <div>
             <h1 class="title" >Access | Movie </h1>
