--- a/view/index.html.twig
+++ b/view/index.html.twig
@@ -18,16 +18,20 @@
               <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="ml-1 mr-1 nav-item d-flex justify-content-center align-items-center">
-                    <i class="fas fa-home"></i>
-                      <a class="m-1 nav-link" href="index.html">Accueil <span class="sr-only">(current)</span></a>
+                      <a class="m-1 nav-link" href="index.html">Tous les Films <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="ml-1 mr-1 nav-item  d-flex justify-content-center align-items-center">
-                    <i class="fas fa-file-invoice"></i>
-                      <a class="m-1 nav-link" href="candidat.html">A Propos</a>
+                      <a class="m-1 nav-link" href="candidat.html">Genres</a>
                     </li>
                   <li class="ml-1 mr-1 nav-item  d-flex justify-content-center align-items-center">
-                      <i class="far fa-handshake"></i>
-                      <a class="m-1 nav-link" href="recruteur.html">Contact</a>
+
+                      <a class="m-1 nav-link" href="recruteur.html">Realisateurs</a>
+                    </li>
+                     <li class="ml-1 mr-1 nav-item  d-flex justify-content-center align-items-center">
+                      <a class="m-1 nav-link" href="recruteur.html">Acteurs</a>
+                    </li>
+                     <li class="ml-1 mr-1 nav-item  d-flex justify-content-center align-items-center">
+                      <a class="m-1 nav-link" href="recruteur.html">Année</a>
                     </li>
                 </ul>
               </div>
