--- a/view/film.html.twig
+++ b/view/film.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
 
     {% for film in films %}
-        <div>
+        <div class="row">
             <h1>{{film.titre}}</h1>
         </div>
         <div>
