--- a/view/index.html.twig
+++ b/view/index.html.twig
@@ -39,7 +39,7 @@
           </div> 
     <header class="d-flex flex-column justify-content-center align-items-center" id="home">
         <div>
-            <h1 class="title" >Access | Movie </h1>
+            <i class="access fas fa-video"> <h1 class="title" ></i>Acc<span class="access">ess</span> | Mo<span class="access">vie</span></h1>
             <h2 class="text-center"> {{title}}</h2>
         </div>
         <hr>
