--- a/view/film.html.twig
+++ b/view/film.html.twig
@@ -3,7 +3,8 @@
 {% block content %}
 
     {% for film in films %}
-        <div class="row">
+    <section class="contenue">
+        <div>
             <h1>{{film.titre}}</h1>
         </div>
         <div>
@@ -15,6 +16,7 @@
             <div>
             <p>{{film.realisateur}}</p>
         </div>
+    </section>
 
     {% endfor %}
 
