--- a/view/genre.html.twig
+++ b/view/genre.html.twig
@@ -4,9 +4,11 @@
  {% block content %}
 
     {% for genre in genre %}
+      <section class="contenue">
         <div>
             <h1>{{genre.type}}</h1>
         </div>
+            </section>
 
     {% endfor %}
 
