--- a/view/famille.html.twig
+++ b/view/famille.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    {% for film in films %}
+    {% for film in famille %}
     <div class="d-flex flex-row"> 
         <div class="image">
             <img src="{{film.image_film}}" alt="img"> 
