--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     margin-right: auto;
     margin-left: auto; }
   body .bg-light {
-    background-color: #040404eb !important;
+    background-color: #040404 !important;
     box-shadow: 0px 10px 40px #00000091; }
   body .navbar-light .navbar-nav .nav-link {
     color: #ffffffab;
