--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,7 @@ body{
         margin-left: auto;
     }
     .bg-light {
-        background-color: #040404eb!important;
+        background-color: #040404!important;
         box-shadow: 0px 10px 40px #00000091;
     }
     .navbar-light .navbar-nav .nav-link {
