--- a/view/index.html.twig
+++ b/view/index.html.twig
@@ -9,61 +9,61 @@
     <link  rel="stylesheet" type="text/css" href="style.css" />
     <title>ACCESS-MOVIE</title>
 </head>
-<body  class="d-flex flex-column align-items-center justify-content-center">
-
-<div class="container-fluid manav">
-          <nav id="home" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-              <!--<a class="navbar-brand" href="index.html"><i class="far fa-smile-wink"></i></a>-->
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="ml-1 mr-1 nav-item d-flex justify-content-center align-items-center">
-                      <a class="m-1 nav-link" href="http://localhost/access_movie/films">Tous les Films <span class="sr-only">(current)</span></a>
-                  </li>
-                  <li class="ml-1 mr-1 nav-item  d-flex justify-content-center align-items-center">
-                      <a class="m-1 nav-link" href="http://localhost/access_movie/realisateur">Realisateurs</a>
+<body>
+    <section class="ma_page container-fluid ">
+      
+        <header class="container-fluid d-flex flex-column justify-content-center align-items-center" id="home">
+          <div class="container-fluid manav">
+            <nav id="home" class="navbar navbar-expand-lg navbar-dark bg-light fixed-top">
+                <!--<a class="navbar-brand" href="index.html"><i class="far fa-smile-wink"></i></a>-->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <ul class="navbar-nav">
+                    <li class="ml-1 mr-1 nav-item d-flex justify-content-center align-items-center">
+                        <a class="m-1 nav-link" href="http://localhost/access_movie/films">Tous les Films <span class="sr-only">(current)</span></a>
                     </li>
-                     <li class="ml-1 mr-1 nav-item  d-flex justify-content-center align-items-center">
-                      <a class="m-1 nav-link" href="">Acteurs</a>
-                    </li>
-                     <li class="ml-1 mr-1 nav-item  d-flex justify-content-center align-items-center">
-                      <a class="m-1 nav-link" href="">Année</a>
-                    </li>
-                </ul>
-              </div>
+                    <li class="ml-1 mr-1 nav-item  d-flex justify-content-center align-items-center">
+                        <a class="m-1 nav-link" href="http://localhost/access_movie/realisateur">Realisateurs</a>
+                        </li>
+                        <li class="ml-1 mr-1 nav-item  d-flex justify-content-center align-items-center">
+                        <a class="m-1 nav-link" href="">Acteurs</a>
+                        </li>
+                        <li class="ml-1 mr-1 nav-item  d-flex justify-content-center align-items-center">
+                        <a class="m-1 nav-link" href="">Année</a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
-          </div> 
-    <header class="d-flex flex-column justify-content-center align-items-center" id="home">
-        <div class="title">
-        <p class="icone"></p>
-            <h1 class="title" >Acc<span class="access">ess</span> <i class="icone fas fa-video"></i> Mo<span class="access">vie</span></h1>
-            <h2 class="text-center"> {{title}}</h2>
-        </div>
-        <hr>
-      </header>
-         <section class="affichage_genre row" >
-            <a href="http://localhost/access_movie/action">Action</a>
-            <a href="http://localhost/access_movie/animation">Animation</a>
-            <a href="http://localhost/access_movie/art_martiaux">Arts Martiaux</a>
-            <a href="http://localhost/access_movie/avanture">Aventure</a>
-            <a href="http://localhost/access_movie/biopic">Biopic</a>
-            <a href="http://localhost/access_movie/bollywood">Bollywood</a>
-            <a href="http://localhost/access_movie/drame">Drame</a>
-            <a href="http://localhost/access_movie/romance">Romance</a>
-            <a href="http://localhost/access_movie/famille">Famille</a>
-            <a href="http://localhost/access_movie/fiction">Science-fiction</a>
+        </div> 
+            <div class="title">
+            <p class="icone"></p>
+                <h1 class="title" >Acc<span class="access">ess</span> <i class="icone fas fa-video"></i> Mo<span class="access">vie</span></h1>
+                <h2 class="text-center"> {{title}}</h2>
+            </div>
+            <hr>
+        </header>
+            <section class="container-fluid justify-content-center affichage_genre row" >
+                <a href="http://localhost/access_movie/action">Action</a>
+                <a href="http://localhost/access_movie/animation">Animation</a>
+                <a href="http://localhost/access_movie/art_martiaux">Arts Martiaux</a>
+                <a href="http://localhost/access_movie/avanture">Aventure</a>
+                <a href="http://localhost/access_movie/biopic">Biopic</a>
+                <a href="http://localhost/access_movie/bollywood">Bollywood</a>
+                <a href="http://localhost/access_movie/drame">Drame</a>
+                <a href="http://localhost/access_movie/romance">Romance</a>
+                <a href="http://localhost/access_movie/famille">Famille</a>
+                <a href="http://localhost/access_movie/fiction">Science-fiction</a>
 
-        </section>
-        <section class="affichage" >
-             {% block content %}
-             {%  endblock %}
-             
-        </section>
-    
+            </section>
+            <section class="container-fluid affichage" >
+                {% block content %}
+                {%  endblock %}
+                
+            </section>
+    </section>
    
-
 
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -72,7 +72,7 @@
             crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             crossorigin="anonymous"></script>
-        <script src="app.js"></script>
+        <script src="app.js"></script> 
 </body>
 
 </html>
