--- a/view/acteur.html.twig
+++ b/view/acteur.html.twig
@@ -3,10 +3,10 @@
  
  {% block content %}
 
-    {% for realisateur in realisateurs %}
+    {% for acteur in acteurs %}
     <section class="contenue_realisateur">
         <div>
-            <a href="films/realisateur/{{realisateur.id}}"><h1>{{realisateur.realisateur}}</h1></a>
+            <a href="films/acteur/{{acteur.id}}"><h1>{{acteur.acteur}}</h1></a>
             
         </div>
     </section>
