--- a/style.css
+++ b/style.css
@@ -1,30 +1,37 @@
 body .ma_page {
   background: linear-gradient(#7f0000, #540000);
-  height: 100%; }
-  body .ma_page header .container-fluid {
-    padding: 0;
-    margin-right: auto;
-    margin-left: auto; }
-  body .ma_page header .bg-light {
-    background-color: #040404eb !important;
-    box-shadow: 0px 7px 30px #0000008a; }
-  body .ma_page header .navbar-dark .navbar-nav .nav-link {
-    color: #ffffffab;
-    font-size: 20px;
-    margin: 0px 20px; }
-    body .ma_page header .navbar-dark .navbar-nav .nav-link:hover {
-      color: #84848491; }
-  body .ma_page header .fa, body .ma_page header .far, body .ma_page header .fas {
-    font-family: "Font Awesome 5 Free";
-    color: #ffffffa1; }
-  body .ma_page header .title .icone {
-    position: relative;
-    top: -5vh;
-    color: #ffffffc7;
-    font-size: 3rem;
-    transform: rotate(15deg);
-    text-shadow: 58px -15px 78px #92ddff;
-    animation: cam 5s infinite; }
+  height: 100%;
+}
+body .ma_page header .container-fluid {
+  padding: 0;
+  margin-right: auto;
+  margin-left: auto;
+}
+body .ma_page header .bg-light {
+  background-color: #040404eb !important;
+  box-shadow: 0px 7px 30px #0000008a;
+}
+body .ma_page header .navbar-dark .navbar-nav .nav-link {
+  color: #ffffffab;
+  font-size: 20px;
+  margin: 0px 20px;
+}
+body .ma_page header .navbar-dark .navbar-nav .nav-link:hover {
+  color: #84848491;
+}
+body .ma_page header .fa, body .ma_page header .far, body .ma_page header .fas {
+  font-family: "Font Awesome 5 Free";
+  color: #ffffffa1;
+}
+body .ma_page header .title .icone {
+  position: relative;
+  top: -5vh;
+  color: #ffffffc7;
+  font-size: 3rem;
+  transform: rotate(15deg);
+  text-shadow: 58px -15px 78px #92ddff;
+  animation: cam 5s infinite;
+}
 @keyframes cam {
   0% {
     transform: rotate(15deg);
@@ -39,62 +46,77 @@ body .ma_page {
     transform: rotate(30deg);
   }
   100% {
-    transform: rotate(15deg); } }
-  body .ma_page header .title h1 {
-    font-size: 5rem;
-    margin-top: 15vh;
-    color: #040404eb;
-    text-transform: uppercase;
-    font-weight: bold;
-    text-shadow: 5px 29px 22px #00000030; }
-    body .ma_page header .title h1 .access {
-      color: #ffffffb5; }
-  body .ma_page header .title h2 {
-    color: #d4d4d4eb;
-    margin: 5vh;
-    text-shadow: 5px 9px 12px #00000030; }
-  body .ma_page header hr {
-    display: block;
-    margin-top: 0.5em;
-    margin-bottom: 3em;
-    margin-left: auto;
-    margin-right: auto;
-    border-style: inset;
-    border-width: 1px;
-    width: 20vw;
-    color: #ffffff9c; }
-  body .ma_page .affichage_genre a {
-    font-size: 1.5rem !important;
-    margin: 0px 20px;
-    color: #ffffffb5;
-    text-decoration: none;
-    margin-bottom: 2em; }
-    body .ma_page .affichage_genre a:hover {
-      color: black; }
-  body .ma_page .affichage {
-    max-width: 60vw;
-    color: #d4d4d4eb;
-    margin-bottom: 10vh; }
-    body .ma_page .affichage .image img {
-      height: 250px;
-      width: auto; }
-    body .ma_page .affichage .contenue {
-      height: 250px;
-      padding: 21px 45px;
-      margin-bottom: 2em;
-      box-shadow: 10px 2px 62px #ff202047;
-      background-color: #350000fa; }
-      body .ma_page .affichage .contenue h1 {
-        font-size: 2rem; }
-    body .ma_page .affichage .contenue_realisateur {
-      padding: 21px 45px;
-      margin-bottom: 2em;
-      box-shadow: 10px 2px 62px #ff202047;
-      background-color: #350000fa; }
-      body .ma_page .affichage .contenue_realisateur a {
-        text-decoration: none;
-        color: #ffffffb5; }
-      body .ma_page .affichage .contenue_realisateur h1 {
-        font-size: 2rem; }
+    transform: rotate(15deg);
+  }
+}
+body .ma_page header .title h1 {
+  font-size: 5rem;
+  margin-top: 15vh;
+  color: #040404eb;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-shadow: 5px 29px 22px #00000030;
+}
+body .ma_page header .title h1 .access {
+  color: #ffffffb5;
+}
+body .ma_page header .title h2 {
+  color: #d4d4d4eb;
+  margin: 5vh;
+  text-shadow: 5px 9px 12px #00000030;
+}
+body .ma_page header hr {
+  display: block;
+  margin-top: 0.5em;
+  margin-bottom: 3em;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+  border-width: 1px;
+  width: 20vw;
+  color: #ffffff9c;
+}
+body .ma_page .affichage_genre a {
+  font-size: 1.5rem !important;
+  margin: 0px 20px;
+  color: #ffffffb5;
+  text-decoration: none;
+  margin-bottom: 2em;
+}
+body .ma_page .affichage_genre a:hover {
+  color: black;
+}
+body .ma_page .affichage {
+  max-width: 60vw;
+  color: #d4d4d4eb;
+  margin-bottom: 10vh;
+}
+body .ma_page .affichage .image img {
+  height: 250px;
+  width: auto;
+}
+body .ma_page .affichage .contenue {
+  height: 250px;
+  padding: 21px 45px;
+  margin-bottom: 2em;
+  box-shadow: 10px 2px 62px #ff202047;
+  background-color: #350000fa;
+}
+body .ma_page .affichage .contenue h1 {
+  font-size: 2rem;
+}
+body .ma_page .affichage .contenue_realisateur {
+  padding: 21px 45px;
+  margin-bottom: 2em;
+  box-shadow: 10px 2px 62px #ff202047;
+  background-color: #350000fa;
+}
+body .ma_page .affichage .contenue_realisateur a {
+  text-decoration: none;
+  color: #ffffffb5;
+}
+body .ma_page .affichage .contenue_realisateur h1 {
+  font-size: 2rem;
+}
 
 /*# sourceMappingURL=style.css.map */
