--- a/view/acteur.html.twig
+++ b/view/acteur.html.twig
@@ -6,7 +6,7 @@
     {% for acteur in acteurs %}
     <section class="contenue_realisateur">
         <div>
-            <a href="films/acteur/{{acteur.id}}"><h1>{{acteur.acteur}}</h1></a>
+            <a href="films/acteur/{{acteur.id}}"><h1 class="text-center">{{acteur.acteur}}</h1></a>
             
         </div>
     </section>
