--- a/view/annee.html.twig
+++ b/view/annee.html.twig
@@ -6,7 +6,7 @@
     {% for annee in annees %}
     <section class="contenue_realisateur">
         <div>
-            <a href="films/annee/{{annee.annee}}"><h1>{{annee.annee}}</h1></a>
+            <a href="films/annee/{{annee.annee}}"><h1 class="text-center">{{annee.annee}}</h1></a>
             
         </div>
     </section>
