Ajout de la requête global sur toutes les pages

--- a/view/film.html.twig
+++ b/view/film.html.twig
@@ -11,13 +11,25 @@
             </div>
         <section class="contenue">
             <div>
-                <h1>{{film.titre}}</h1>
+                <h2>{{film.titre}}</h2>
             </div>
             <div>
-                <p>{{film.description}}</p>
+                <p>Date de sortie : {{film.annee}}</p>
             </div>
             <div>
-                <p>{{film.annee}}</p>
+                <p>
+                De : {{film.realisateur}}
+                </p>
+            </div>
+            <div>
+                <p>Avec : {{film.acteur}}</p>
+            </div>
+            <div>
+                <p>Genre : {{film.genre}}
+                </p>
+            </div>
+            <div>
+                <p>Synopsis : {{film.description}}</p>
             </div>
         </section>
     </div>
