--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ body .ma_page {
     transform: rotate(15deg);
     text-shadow: 58px -15px 78px #92ddff;
     animation: cam 5s infinite; }
+    @media (max-width: 575px) {
+      body .ma_page header .title .icone {
+        font-size: 2rem; } }
 @keyframes cam {
   0% {
     transform: rotate(15deg); }
@@ -43,6 +46,9 @@ body .ma_page {
     text-transform: uppercase;
     font-weight: bold;
     text-shadow: 5px 29px 22px #00000030; }
+    @media (max-width: 575px) {
+      body .ma_page header .title h1 {
+        font-size: 2rem; } }
     body .ma_page header .title h1 .access {
       color: #ffffffb5; }
   body .ma_page header .title h2 {
@@ -59,18 +65,28 @@ body .ma_page {
     border-width: 1px;
     width: 20vw;
     color: #ffffff9c; }
+  @media (max-width: 575px) {
+    body .ma_page .affichage_genre {
+      margin: 0; } }
   body .ma_page .affichage_genre a {
     font-size: 1.5rem !important;
     margin: 0px 20px;
     color: #ffffffb5;
     text-decoration: none;
     margin-bottom: 2em; }
+    @media (max-width: 575px) {
+      body .ma_page .affichage_genre a {
+        font-size: 1rem;
+        margin: 0px 15px; } }
     body .ma_page .affichage_genre a:hover {
       color: black; }
   body .ma_page .affichage {
-    max-width: 60vw;
+    max-width: 75vw;
     color: #d4d4d4eb;
     margin-bottom: 10vh; }
+    @media (max-width: 575px) {
+      body .ma_page .affichage {
+        max-width: 90vw; } }
     body .ma_page .affichage .bande_annonce {
       margin-top: -32px;
       margin-bottom: 30px;
@@ -78,17 +94,26 @@ body .ma_page {
       body .ma_page .affichage .bande_annonce iframe {
         width: 100%;
         height: 530px; }
+        @media (max-width: 575px) {
+          body .ma_page .affichage .bande_annonce iframe {
+            height: 280px; } }
     body .ma_page .affichage .image img {
-      height: 250px;
+      height: 400px;
       width: auto;
       padding: 10px;
       background-color: #350000fa; }
+      @media (max-width: 575px) {
+        body .ma_page .affichage .image img {
+          height: 291px; } }
     body .ma_page .affichage .contenue {
-      height: 250px;
+      height: 400px;
       padding: 21px 45px;
       margin-bottom: 2em;
       box-shadow: 10px 2px 62px #ff202047;
       background-color: #350000fa; }
+      @media (max-width: 575px) {
+        body .ma_page .affichage .contenue {
+          height: auto; } }
       body .ma_page .affichage .contenue .showBandeAnnonce {
         display: block;
         cursor: grab; }
