--- a/style.scss
+++ b/style.scss
@@ -3,8 +3,6 @@ body{
         background: linear-gradient(#7f0000, #540000);
         // background-color: #6d0000;
         height: 100%;
-    
-        
         header{
 
             .container-fluid {
@@ -38,6 +36,9 @@ body{
                     transform: rotate(15deg);
                     text-shadow: 58px -15px 78px #92ddff;
                     animation: cam 5s infinite;
+                    @media (max-width: 575px) {
+                        font-size: 2rem;
+                    }
                 }
                 @keyframes cam {
                     0%{
@@ -68,6 +69,10 @@ body{
                     text-transform: uppercase;
                     font-weight: bold;
                     text-shadow: 5px 29px 22px #00000030;
+                    @media (max-width: 575px) {
+                        font-size: 2rem;
+                     
+                    }
                     .access{
                         color: #ffffffb5;
                     }
@@ -99,22 +104,31 @@ body{
         //     }
         // }
         .affichage_genre{
-           
+            @media (max-width: 575px) {
+                margin: 0;
+            }
             a{
                 font-size: 1.5rem !important;
                 margin: 0px 20px;
                 color:#ffffffb5;
                 text-decoration: none; 
                 margin-bottom: 2em;
+                @media (max-width: 575px) {
+                    font-size: 1rem;
+                    margin: 0px 15px;
+                }
                 &:hover{
                     color: black;
                 }
             }
         }
         .affichage{
-            max-width: 60vw;
+            max-width: 75vw;
             color:#d4d4d4eb;
             margin-bottom: 10vh;
+            @media (max-width: 575px) {
+              max-width: 90vw;
+            }
             .bande_annonce {
                 margin-top: -32px;
                 margin-bottom: 30px;
@@ -123,22 +137,31 @@ body{
                     iframe{
                     width: 100%;
                     height: 530px;
+                    @media (max-width: 575px) {
+                      height: 280px;
+                    }
                 } 
             }           
             .image{
                 img{
-                    height: 250px; 
+                    height: 400px; 
                     width: auto;
                     padding: 10px;
                     background-color: #350000fa;
+                    @media (max-width: 575px) {
+                        height: 291px;
+                    }
                 }
             }
             .contenue {
-                height: 250px;
-                padding: 21px 45px;
+                height: 400px;
+                padding: 21px 45px; 
                 margin-bottom: 2em;
                 box-shadow: 10px 2px 62px #ff202047;
                 background-color: #350000fa;
+                @media (max-width: 575px) {
+                    height: auto;
+                }
                 .showBandeAnnonce{
                     display: block;
                     cursor: grab;
