--- a/view/index.html.twig
+++ b/view/index.html.twig
@@ -13,7 +13,7 @@
 <body>
     <section class="ma_page container-fluid ">
       
-        <header class="container-fluid d-flex flex-column justify-content-center align-items-center" id="home">
+        <header id="header" class="container-fluid d-flex flex-column justify-content-center align-items-center" id="home">
           <div class="container-fluid manav">
             <nav id="home" class="navbar navbar-expand-lg navbar-dark bg-light fixed-top">
                 <!--<a class="navbar-brand" href="index.html"><i class="far fa-smile-wink"></i></a>-->
@@ -40,11 +40,12 @@
         </div> 
             <div class="title">
             <p class="icone"></p>
-                <h1 class="title" >Acc<span class="access">ess</span> <i class="icone fas fa-video"></i> Mo<span class="access">vie</span></h1>
+                <h1 class="title d-flex flex-row" >Acc<span class="access">ess</span> <i class="icone fas fa-video"></i> Mo<span class="access">vie</span></h1>
                 <h2 class="text-center"> {{title}}</h2>
             </div>
             <hr>
         </header>
+        <div class="goup"> </div>
                 {% block menugenre %}
                 {% endblock %}
             <section class="container-fluid affichage" >
