--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ body .ma_page {
     color: #ffffffa1; }
   body .ma_page header .title .icone {
     position: relative;
-    top: -5vh;
+    top: -3vh;
+    margin: 15px;
     color: #ffffffc7;
     font-size: 3rem;
     transform: rotate(15deg);
@@ -65,6 +66,10 @@ body .ma_page {
     border-width: 1px;
     width: 20vw;
     color: #ffffff9c; }
+    @media (max-width: 575px) {
+      body .ma_page header hr {
+        width: 40vw;
+        margin-bottom: 1em; } }
   @media (max-width: 575px) {
     body .ma_page .affichage_genre {
       margin: 0; } }
@@ -76,8 +81,8 @@ body .ma_page {
     margin-bottom: 2em; }
     @media (max-width: 575px) {
       body .ma_page .affichage_genre a {
-        font-size: 1rem;
-        margin: 0px 15px; } }
+        font-size: 2rem !important;
+        margin: 2px 20px; } }
     body .ma_page .affichage_genre a:hover {
       color: black; }
   body .ma_page .affichage {
@@ -86,7 +91,8 @@ body .ma_page {
     margin-bottom: 10vh; }
     @media (max-width: 575px) {
       body .ma_page .affichage {
-        max-width: 90vw; } }
+        max-width: 95vw;
+        margin-top: 5vh; } }
     body .ma_page .affichage .bande_annonce {
       margin-top: -32px;
       margin-bottom: 30px;
@@ -96,15 +102,17 @@ body .ma_page {
         height: 530px; }
         @media (max-width: 575px) {
           body .ma_page .affichage .bande_annonce iframe {
-            height: 280px; } }
-    body .ma_page .affichage .image img {
-      height: 400px;
-      width: auto;
-      padding: 10px;
-      background-color: #350000fa; }
-      @media (max-width: 575px) {
-        body .ma_page .affichage .image img {
-          height: 291px; } }
+            height: 400px; } }
+    body .ma_page .affichage .image {
+      display: block; }
+      body .ma_page .affichage .image img {
+        height: 400px;
+        width: auto;
+        padding: 10px;
+        background-color: #350000fa; }
+        @media (max-width: 575px) {
+          body .ma_page .affichage .image img {
+            height: 291px; } }
     body .ma_page .affichage .contenue {
       height: 400px;
       padding: 21px 45px;
