--- a/style.scss
+++ b/style.scss
@@ -30,7 +30,8 @@ body{
             .title{
                 .icone{ 
                     position: relative;
-                    top: -5vh;
+                    top: -3vh;
+                    margin: 15px;
                     color: #ffffffc7;
                     font-size: 3rem;
                     transform: rotate(15deg);
@@ -93,6 +94,10 @@ body{
                 border-width: 1px; 
                 width: 20vw;
                 color:#ffffff9c;
+                @media (max-width: 575px) {
+                    width: 40vw;
+                    margin-bottom: 1em;
+                }             
             }
         }
         // .contenue_genre{
@@ -114,8 +119,8 @@ body{
                 text-decoration: none; 
                 margin-bottom: 2em;
                 @media (max-width: 575px) {
-                    font-size: 1rem;
-                    margin: 0px 15px;
+                    font-size: 2rem !important;
+                    margin: 2px 20px;
                 }
                 &:hover{
                     color: black;
@@ -127,7 +132,9 @@ body{
             color:#d4d4d4eb;
             margin-bottom: 10vh;
             @media (max-width: 575px) {
-              max-width: 90vw;
+              max-width: 95vw;
+              margin-top: 5vh;
+
             }
             .bande_annonce {
                 margin-top: -32px;
@@ -138,11 +145,12 @@ body{
                     width: 100%;
                     height: 530px;
                     @media (max-width: 575px) {
-                      height: 280px;
+                      height: 400px;
                     }
                 } 
             }           
             .image{
+                display: block;
                 img{
                     height: 400px; 
                     width: auto;
