--- a/view/film.html.twig
+++ b/view/film.html.twig
@@ -6,11 +6,13 @@
 
     {% for film in films %}
    
-    <div class="container-fluid d-flex flex-column flex-sm-column flex-md-column flex-lg-row"> 
-        <div class="image">
-            <img src="{{film.image_film}}" alt="img"> 
+    <div class="container-fluid d-flex flex-column"> 
+        <div class="image col-12" style="background: url({{film.image_film}}); background-size: cover;
+                background-position: top;
+                height: 400px; margin:0;">
+            {# <img src="{{film.image_film}}" alt="img">  #}  
             </div>
-        <section class="contenue">
+        <section class="contenue col-12">
             <div>
                 <h2>{{film.titre}}</h2>
             </div>
