--- a/style.css
+++ b/style.css
@@ -56,6 +56,17 @@ body .ma_page {
     color: #d4d4d4eb;
     margin: 5vh;
     text-shadow: 5px 9px 12px #00000030; }
+  body .ma_page header .title a {
+    text-decoration: none; }
+  body .ma_page header .title .goback {
+    color: #d4d4d4eb;
+    font-size: 1.5rem;
+    margin: 5vh;
+    text-shadow: 5px 9px 12px #00000030; }
+    body .ma_page header .title .goback:hover {
+      transform: scale(1.2);
+      transition: .4s;
+      text-decoration: none; }
   body .ma_page header hr {
     display: block;
     margin-top: 0.5em;
@@ -84,9 +95,11 @@ body .ma_page {
         font-size: 2rem !important;
         margin: 2px 20px; } }
     body .ma_page .affichage_genre a:hover {
-      color: black; }
+      color: black;
+      transform: scale(1.2);
+      transition: .4s; }
   body .ma_page .affichage {
-    max-width: 75vw;
+    max-width: 65vw;
     color: #d4d4d4eb;
     margin-bottom: 10vh; }
     @media (max-width: 575px) {
@@ -114,7 +127,6 @@ body .ma_page {
           body .ma_page .affichage .image img {
             height: 291px; } }
     body .ma_page .affichage .contenue {
-      height: 400px;
       padding: 21px 45px;
       margin-bottom: 2em;
       box-shadow: 10px 2px 62px #ff202047;
@@ -125,20 +137,37 @@ body .ma_page {
       body .ma_page .affichage .contenue .showBandeAnnonce {
         display: block;
         cursor: grab; }
+        body .ma_page .affichage .contenue .showBandeAnnonce:hover {
+          transform: scale(1.2);
+          transition: .4s; }
       body .ma_page .affichage .contenue .hideBandeAnnonce {
         display: none;
         cursor: grab; }
+        body .ma_page .affichage .contenue .hideBandeAnnonce:hover {
+          transform: scale(1.2);
+          transition: .4s; }
       body .ma_page .affichage .contenue h1 {
         font-size: 2rem; }
     body .ma_page .affichage .contenue_realisateur {
-      padding: 21px 45px;
+      padding: 0px;
       margin-bottom: 2em;
       box-shadow: 10px 2px 62px #ff202047;
-      background-color: #350000fa; }
+      background-color: #350000fa;
+      width: 50vw; }
+      body .ma_page .affichage .contenue_realisateur:hover {
+        transform: scale(1.05);
+        transition: .4s; }
+      @media (max-width: 575px) {
+        body .ma_page .affichage .contenue_realisateur {
+          width: 90vw; } }
       body .ma_page .affichage .contenue_realisateur a {
         text-decoration: none;
         color: #ffffffb5; }
       body .ma_page .affichage .contenue_realisateur h1 {
-        font-size: 2rem; }
+        font-size: 2rem;
+        margin: 15px; }
+        body .ma_page .affichage .contenue_realisateur h1:hover {
+          transform: scale(1.2);
+          transition: .4s; }
 
 /*# sourceMappingURL=style.css.map */
