--- a/style.scss
+++ b/style.scss
@@ -83,7 +83,21 @@ body{
                     margin: 5vh;
                     text-shadow: 5px 9px 12px #00000030;
                 }
-            }
+                a{
+                    text-decoration: none;                    }
+    
+                    .goback{
+                        color:#d4d4d4eb;
+                        font-size: 1.5rem;
+                        margin: 5vh;
+                        text-shadow: 5px 9px 12px #00000030;
+                        &:hover{
+                            transform: scale(1.2); 
+                            transition: .4s;
+                            text-decoration: none;
+                        }  
+                    }
+                }
             hr { 
                 display: block;
                 margin-top: 0.5em;
@@ -124,11 +138,13 @@ body{
                 }
                 &:hover{
                     color: black;
+                    transform: scale(1.2); 
+                    transition: .4s;
                 }
             }
         }
         .affichage{
-            max-width: 75vw;
+            max-width: 65vw;
             color:#d4d4d4eb;
             margin-bottom: 10vh;
             @media (max-width: 575px) {
@@ -162,7 +178,7 @@ body{
                 }
             }
             .contenue {
-                height: 400px;
+                // height: 400px;
                 padding: 21px 45px; 
                 margin-bottom: 2em;
                 box-shadow: 10px 2px 62px #ff202047;
@@ -173,26 +189,47 @@ body{
                 .showBandeAnnonce{
                     display: block;
                     cursor: grab;
+                      &:hover{
+                        transform: scale(1.2); 
+                        transition: .4s;
+                    }
                 }
                 .hideBandeAnnonce{
                     display: none;
                     cursor: grab;
+                      &:hover{
+                        transform: scale(1.2); 
+                        transition: .4s;
+                    }
                 }
                 h1{
                     font-size: 2rem;
                 }
             }       
             .contenue_realisateur{
-                padding: 21px 45px;
+                padding: 0px;
                 margin-bottom: 2em;
                 box-shadow: 10px 2px 62px #ff202047;
                 background-color: #350000fa;
+                width: 50vw;
+                &:hover{
+                    transform: scale(1.05); 
+                    transition: .4s;
+                }
+                @media (max-width: 575px) {
+                    width: 90vw;
+                }
                 a{
                     text-decoration: none;
                     color: #ffffffb5;
                 }
                 h1{
                     font-size: 2rem;
+                    margin: 15px;
+                    &:hover{
+                        transform: scale(1.2); 
+                        transition: .4s;
+                    }
                 }
             }
         }
