--- a/view/annee.html.twig
+++ b/view/annee.html.twig
@@ -4,12 +4,18 @@
  {% block content %}
 
     {% for annee in annees %}
-    <section class="contenue_realisateur">
-        <div>
-            <a href="films/annee/{{annee.annee}}"><h1 class="text-center">{{annee.annee}}</h1></a>
-            
-        </div>
-    </section>
+    <div class="container-fluid d-flex flex-column"> 
+            <div class="image col-12" style="background: url({{film.image_film}}); background-size: cover;
+                    background-position: top;
+                    height: 400px; margin:0;">
+            </div>
+        <section class="contenue_realisateur">
+            <div>
+                <a href="films/annee/{{annee.annee}}"><h1 class="text-center">{{annee.annee}}</h1></a>
+                
+            </div>
+        </section>
+    </div>
 
     {% endfor %}
  
