--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,15 @@ body{
         background: linear-gradient(#7f0000, #540000);
         // background-color: #6d0000;
         height: 100%;
+        .goup{
+            position: fixed;
+            top:90vh;
+            right: 5vw;
+            i{
+                font-size: 4rem;
+                color: #ffffffb5;
+            }
+        }
         header{
 
             .container-fluid {
@@ -177,7 +186,7 @@ body{
                     }
                 }
             }
-            .contenue {
+            .contenu {
                 // height: 400px;
                 padding: 21px 45px; 
                 margin-bottom: 2em;
@@ -189,24 +198,29 @@ body{
                 .showBandeAnnonce{
                     display: block;
                     cursor: grab;
+                    color: #85ddffb8;
+                    font-weight: bold;
                       &:hover{
-                        transform: scale(1.2); 
+                        transform: scale(1.02); 
                         transition: .4s;
                     }
                 }
                 .hideBandeAnnonce{
                     display: none;
                     cursor: grab;
+                    color: #85ddffb8;
+                    font-weight: bold;
                       &:hover{
-                        transform: scale(1.2); 
+                        transform: scale(1.02); 
                         transition: .4s;
                     }
                 }
                 h1{
                     font-size: 2rem;
                 }
-            }       
-            .contenue_realisateur{
+            }
+            
+            .contenu_realisateur{
                 padding: 0px;
                 margin-bottom: 2em;
                 box-shadow: 10px 2px 62px #ff202047;
@@ -232,6 +246,52 @@ body{
                     }
                 }
             }
+            .contenu_acteur{
+                padding: 0px;
+                margin-bottom: 2em;
+                box-shadow: 10px 2px 62px #ff202047;
+                background-color: #350000fa;
+                width: 40vw;
+                &:hover{
+                    transform: scale(1.05); 
+                    transition: .4s;
+                }
+                a{
+                    text-decoration: none;
+                    color: #ffffffb5;
+                }
+                h1{
+                    font-size: 2rem;
+                    margin: 15px;
+                    &:hover{
+                        transform: scale(1.2); 
+                        transition: .4s;
+                    }
+                }
+            }   
+            .contenu_annee{
+                padding: 0px;
+                margin-bottom: 2em;
+                box-shadow: 10px 2px 62px #ff202047;
+                background-color: #350000fa;
+                width: 30vw;
+                &:hover{
+                    transform: scale(1.05); 
+                    transition: .4s;
+                }
+                a{
+                    text-decoration: none;
+                    color: #ffffffb5;
+                }
+                h1{
+                    font-size: 2rem;
+                    margin: 15px;
+                    &:hover{
+                        transform: scale(1.2); 
+                        transition: .4s;
+                    }
+                }
+            }   
         }
     }
 } 
