--- a/view/film.html.twig
+++ b/view/film.html.twig
@@ -11,7 +11,7 @@
                 background-position: top;
                 height: 400px; margin:0;">
             </div>
-        <section class="contenue col-12">
+        <section class="contenu col-12">
             <div>
                 <h2>{{film.titre}}</h2>
             </div>
@@ -24,7 +24,8 @@
                 </p>
             </div>
             <div>
-                <p>Avec : {{film.acteur}}</p>
+                <p>Avec : {{film.acteur}}</p></a>
+            
             </div>
             <div>
                 <p>Genre : {{film.genre}}
