--- a/view/index.html.twig
+++ b/view/index.html.twig
@@ -12,7 +12,7 @@
 </head>
 <body>
     <section class="ma_page container-fluid ">
-      
+    <div class="goup"> <a href="#header"><i class="fas fa-sort-up"></i></a></div>
         <header id="header" class="container-fluid d-flex flex-column justify-content-center align-items-center" id="home">
           <div class="container-fluid manav">
             <nav id="home" class="navbar navbar-expand-lg navbar-dark bg-light fixed-top">
@@ -42,7 +42,9 @@
             <p class="icone"></p>
                 <h1 class="title d-flex flex-row" >Acc<span class="access">ess</span> <i class="icone fas fa-video"></i> Mo<span class="access">vie</span></h1>
                 <h2 class="text-center"> {{title}}</h2>
-                <a href="./realisateur"><h2 class="goback text-center"> {{back}}</h2></a>
+                <a href="./realisateur"><h2 class="goback text-center"> {{backrealisateur}}</h2></a>
+                <a href="./acteur"><h2 class="goback text-center"> {{backacteur}}</h2></a>
+                <a href="./acteur"><h2 class="goback text-center"> {{backannee}}</h2></a>
                 
             </div>
             <hr>
