--- a/view/realisateur.html.twig
+++ b/view/realisateur.html.twig
@@ -6,7 +6,7 @@
     {% for realisateur in realisateurs %}
      
           
-        <section class="contenue_realisateur">
+        <section class="contenu_realisateur">
             <div>
                 <a href="films/realisateur/{{realisateur.id}}"><h1 class="text-center">{{realisateur.realisateur}}</h1></a>
             </div>
