--- a/view/acteur.html.twig
+++ b/view/acteur.html.twig
@@ -4,7 +4,7 @@
  {% block content %}
 
     {% for acteur in acteurs %}
-    <section class="contenue_realisateur">
+    <section class="contenu_acteur">
         <div>
             <a href="films/acteur/{{acteur.id}}"><h1 class="text-center">{{acteur.acteur}}</h1></a>
             
