--- a/view/film.html.twig
+++ b/view/film.html.twig
@@ -14,10 +14,19 @@
                 <h1>{{film.titre}}</h1>
             </div>
             <div>
+            <p>{{film.genre}}</p>
+            </div>
+            <div>
                 <p>{{film.description}}</p>
             </div>
             <div>
                 <p>{{film.annee}}</p>
+            </div>
+            <div>
+                <p>{{film.realisateur}}</p>
+            </div>
+            <div>
+                <p>{{film.acteur}}</p>
             </div>
         </section>
     </div>
