--- a/view/realisateur.html.twig
+++ b/view/realisateur.html.twig
@@ -3,7 +3,7 @@
  
  {% block content %}
 
-    {% for realisateur in realisateurs %}
+    {% for realisateur in realisateurs|sort %}
      
           
         <section class="contenu_realisateur">
